--- a/public/pages/auth/auth.css
+++ b/public/pages/auth/auth.css
@@ -1,127 +1,262 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #000000;
 }
 
 .card {
-    margin-top: 100px;
-}
-
-.tabs .indicator {
-    background-color: #26a69a;
+  margin-top: 100px;
 }
 
 .centered-div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .container {
-    position: relative;
-    width: 100%;
-    height: 100vh; /* Adjust this value to fit your needs */
-  }
-
-  body {
-    background-color: #080710;
+body {
+  background-color: #000000;
 }
 
 .background {
-    width: 430px;
-    height: 520px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
+  position: absolute;
+
+  transform: translate(-50%, -50%);
+  left: 32%;
+  top: 58.7%;
 }
 
-.background .shape {
-    height: 200px;
-    width: 200px;
-    position: absolute;
-    border-radius: 50%;
+.btn {
+  background-color: #000000 !important;
+  border-radius: 0.4rem;
 }
 
-.shape:first-child {
-    background: linear-gradient(#1845ad,
-            #23a2f6);
-    left: -80px;
-    top: -80px;
+.pointer-cursor {
+  cursor: pointer;
+}
+#login {
+  background-color: #111315;
 }
 
-.shape:last-child {
-    background: linear-gradient(to right,
-            #ff512f,
-            #f09819);
-    right: -30px;
-    bottom: -80px;
+#login-btn {
+  margin-top: 55px;
+}
+#signup {
+  display: none;
+  background-color: #111315;
 }
 
 .forms {
-    height: 520px;
-    width: 400px;
-    background-color: rgba(255, 255, 255, 0.13);
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    padding: 50px 35px;
+  height: 520px;
+  width: 400px;
+  background-color: rgba(255, 255, 255, 0.13);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 70%;
+  border-radius: 5px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 50px 35px;
 }
 
 .forms * {
-    font-family: 'Poppins', sans-serif;
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
 }
-
+.mic-img {
+  width: 100%;
+  height: auto;
+}
 .forms h3 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
 }
-
+.underline {
+  text-decoration: underline;
+}
 label {
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
+  display: block;
+  margin-top: 30px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 input {
-    display: block;
-    height: 30px !important;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
-    border-radius: 3px;
-    padding: 0 10px;
+  display: block;
+  height: 30px !important;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 3px;
+  padding: 0 10px;
 
-    font-size: 14px;
-    font-weight: 300;
-    border-bottom: 1px solid green !important;
+  font-size: 14px;
+  font-weight: 300;
+  border-bottom: 1px solid #000000 !important;
+}
+
+#logo-F {
+  padding: 5px;
+  background-color: red;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 5px;
+  border-radius: 5px;
+}
+
+input[type="text"]:focus {
+  outline: none !important;
 }
 
 ::placeholder {
-    color: #e5e5e5;
+  color: #e5e5e5;
 }
 
 button {
-    margin-top: 50px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710 !important;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #249D93 !important;
-    color: #ffffff !important;
+  margin-top: 25px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710 !important;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #000000 !important;
+  color: #ffffff !important;
+}
+
+.loader {
+  display: none;
+  position: absolute;
+  top: 78%;
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #e8e8e8 #0000;
+  animation: rotate 1.2s linear infinite;
+}
+
+.loader::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+.loadertwo {
+  display: none;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #e8e8e8 #0000;
+  animation: rotate 1.2s linear infinite;
+}
+
+.loadertwo::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 358px) {
+  .background {
+    display: none;
+  }
+
+  .forms {
+    left: 50%;
+    width: 300px !important;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .mic-img {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .background {
+    left: 24%;
+  }
+  .mic-img {
+    width: 70%;
+  }
+
+  .forms {
+    width: 350;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .background {
+    left: 24%;
+  }
+
+  .forms {
+    height: 505px;
+    width: 339px;
+  }
+  .mic-img {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .background {
+    display: none;
+  }
+
+  .forms {
+    left: 50%;
+  }
+  .navbar-brand {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 550px) {
+  .mic-img {
+    width: 60%;
+  }
 }
