--- a/public/pages/battlefield/battlefield.css
+++ b/public/pages/battlefield/battlefield.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html,
@@ -113,10 +113,6 @@ button:hover {
   text-decoration: none;
   cursor: pointer;
 }
-
-
-
-
 
 .local-video,
 .remote-video {
@@ -232,7 +228,6 @@ button:hover {
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
   border-radius: 10px;
-
 }
 
 #ranking-text {
@@ -263,37 +258,6 @@ button:hover {
   border-radius: 10px;
 }
 
-.background {
-  width: 430px;
-  height: 520px;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-}
-
-.background .shape {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  border-radius: 50%;
-}
-
-.shape:first-child {
-  background: linear-gradient(#810314,
-      #530505);
-  left: -80px;
-  top: -80px;
-}
-
-.shape:last-child {
-  background: linear-gradient(to right,
-      #234fc7,
-      #0e2747);
-  right: -30px;
-  bottom: -80px;
-}
-
 body {
   background-color: #080710;
   margin: 0;
@@ -309,7 +273,10 @@ body {
   color: #fff;
   margin: 0;
 }
-
+#fight-btn {
+  color: white;
+  background-color: #111315;
+}
 #signout-btn {
   border: none;
   background-color: transparent;
@@ -324,9 +291,7 @@ body {
   overflow-y: auto;
   padding-left: 26px;
   padding-right: 26px;
-
 }
-
 
 .ranking-items {
   width: 100%;
@@ -334,7 +299,7 @@ body {
   background-color: rgba(255, 255, 255, 0.13);
   margin-top: 10px;
   padding: 10px;
-  transition: transform .3s;
+  transition: transform 0.3s;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -343,7 +308,6 @@ body {
   transform: scale(1.1);
   /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   border: 1px solid yellow;
-
 }
 
 .ranking-name {
@@ -390,7 +354,7 @@ body {
   border-bottom: 1px solid darkgray;
   margin-top: 10px;
   padding: 10px;
-  transition: transform .3s;
+  transition: transform 0.3s;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -404,11 +368,11 @@ body {
 #ranking-list-main::-webkit-scrollbar {
   width: 4px !important;
 }
- 
+
 #ranking-list-main::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
 }
- 
+
 #ranking-list-main::-webkit-scrollbar-thumb {
   background-color: darkgrey !important;
   outline: 1px solid slategrey !important;
@@ -417,23 +381,23 @@ body {
 .chat-messages-container::-webkit-scrollbar {
   width: 4px !important;
 }
- 
+
 .chat-messages-container::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
 }
- 
+
 .chat-messages-container::-webkit-scrollbar-thumb {
   background-color: darkgrey !important;
   outline: 1px solid slategrey !important;
 }
 
-@property --gap{
-  syntax: '<length>';
+@property --gap {
+  syntax: "<length>";
   inherits: true;
   initial-value: 0;
 }
-@property --angle{
-  syntax: '<angle>';
+@property --angle {
+  syntax: "<angle>";
   inherits: true;
   initial-value: 0deg;
 }
@@ -441,8 +405,8 @@ body {
 #online-Image {
   --border: 6px;
   --gap: 12px;
-  --color: #FA6900;
-  
+  --color: #fa6900;
+
   width: 120px;
   aspect-ratio: 1;
   box-sizing: border-box;
@@ -450,41 +414,47 @@ body {
   margin: 20px;
   cursor: pointer;
   padding: calc(var(--border) + var(--gap));
-  
+
   --angle: 90deg;
-  background:
-    radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 85.35% 85.35%,
-    conic-gradient(from calc(180deg - var(--angle)/2),#0000 var(--angle),var(--color) 0),
-    radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 14.65% 85.35%;
-  background-size: var(--border) var(--border),auto;
+  background: radial-gradient(farthest-side, var(--color) 97%, #0000 101%)
+      85.35% 85.35%,
+    conic-gradient(
+      from calc(180deg - var(--angle) / 2),
+      #0000 var(--angle),
+      var(--color) 0
+    ),
+    radial-gradient(farthest-side, var(--color) 97%, #0000 101%) 14.65% 85.35%;
+  background-size: var(--border) var(--border), auto;
   background-repeat: no-repeat;
-  
-  -webkit-mask:
-    radial-gradient(farthest-side, 
-     #000  calc(99%  - calc(var(--border) + var(--gap))),
-     #0000 calc(100% - calc(var(--border) + var(--gap))) 
-           calc(99%  - var(--border)), 
-     #000  calc(100% - var(--border)));
-          mask:
-    radial-gradient(farthest-side, 
-     #000  calc(99%  - calc(var(--border) + var(--gap))),
-     #0000 calc(100% - calc(var(--border) + var(--gap))) 
-           calc(99%  - var(--border)), 
-     #000  calc(100% - var(--border)));
-  transition: --angle .4s,--gap .4s;
+
+  -webkit-mask: radial-gradient(
+    farthest-side,
+    #000 calc(99% - calc(var(--border) + var(--gap))),
+    #0000 calc(100% - calc(var(--border) + var(--gap)))
+      calc(99% - var(--border)),
+    #000 calc(100% - var(--border))
+  );
+  mask: radial-gradient(
+    farthest-side,
+    #000 calc(99% - calc(var(--border) + var(--gap))),
+    #0000 calc(100% - calc(var(--border) + var(--gap)))
+      calc(99% - var(--border)),
+    #000 calc(100% - var(--border))
+  );
+  transition: --angle 0.4s, --gap 0.4s;
 }
 #online-Image:hover {
   --angle: 0deg;
   --gap: 5px;
 }
 
-.video-wrapper{
+.video-wrapper {
   width: 200px;
   height: 200px;
   border-radius: 100px;
   overflow: hidden;
   position: relative;
-  border: 3px solid  orange;
+  border: 3px solid orange;
 }
 
 .local-video:root {
@@ -510,9 +480,7 @@ body {
   opacity: 1;
 }
 
-
-
-.modal-content{
+.modal-content {
   background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm251-aum-01_1_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=a6cc66028f73bea111103608c255e031);
   background-position: center;
   background-repeat: no-repeat;
@@ -521,82 +489,68 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@400;600;700&display=swap");
 
-
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	font-family: "Alumni Sans", sans-serif;
-	font-size: 16px;
+  font-family: "Alumni Sans", sans-serif;
+  font-size: 16px;
 }
 
 section {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	font-size: 2em;
-	background: #212121;
-	color: #fff;
-	text-transform: uppercase;
-	gap: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-size: 2em;
+  background: #212121;
+  color: #fff;
+  text-transform: uppercase;
+  gap: 30px;
 }
 
 h1 {
-	font-size: 2.5em;
-	text-decoration: underline;
-	@media (max-width: 768px) {
-		font-size: 1.3em;
-	}
+  font-size: 2.5em;
+  text-decoration: underline;
+  @media (max-width: 768px) {
+    font-size: 1.3em;
+  }
 }
 
 .text-shadow {
-	font-style: italic;
-	text-transform: uppercase;
-	color: transparent;
-	-webkit-text-stroke: #fff;
-	-webkit-text-stroke-width: 1px;
-	text-shadow: 2px 2px 10px blue;
-	transition: all 0.5s ease-in-out;
-	text-align: center;
-	letter-spacing: 0.2em;
-	animation: flicker 0.5s ease-in-out infinite alternate;
+  font-style: italic;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: #fff;
+  -webkit-text-stroke-width: 1px;
+  text-shadow: 2px 2px 10px blue;
+  transition: all 0.5s ease-in-out;
+  text-align: center;
+  letter-spacing: 0.2em;
+  animation: flicker 0.5s ease-in-out infinite alternate;
 
-	&:hover {
-		color: #fff;
-	}
+  &:hover {
+    color: #fff;
+  }
 }
 
 .tags small {
-	@media (max-width: 768px) {
-		font-size: 0.5em;
-	}
+  @media (max-width: 768px) {
+    font-size: 0.5em;
+  }
 }
 
 @keyframes flicker {
-	0% {
-		opacity: 0.5;
-		text-shadow: 2px 2px 10px blue;
-	}
-	100% {
-		opacity: 1;
-		text-shadow: 2px 2px 20px blue;
-	}
+  0% {
+    opacity: 0.5;
+    text-shadow: 2px 2px 10px blue;
+  }
+  100% {
+    opacity: 1;
+    text-shadow: 2px 2px 20px blue;
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
