--- a/public/pages/auth/auth.css
+++ b/public/pages/auth/auth.css
@@ -1,11 +1,295 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #000000;
 }
 
 .card {
-    margin-top: 100px;
+  margin-top: 6.25rem;
 }
 
-.tabs .indicator {
-    background-color: #26a69a;
+.centered-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.background {
+  position: relative;
+
+  /* transform: translate(-50%, -50%);
+  left: 32%;
+  top: 58.7%; */
+}
+
+.btn {
+  background-color: #000000 !important;
+  border-radius: 0.4rem;
+}
+
+.pointer-cursor {
+  cursor: pointer;
+}
+#login {
+  background-color: #111315;
+}
+
+#login-btn {
+  margin-top: 3.438rem;
+  height: 3.5rem;
+}
+
+#signup-btn {
+  height: 3.5rem;
+}
+#signup {
+  display: none;
+  background-color: #111315;
+}
+
+.forms {
+  height: auto;
+  width: 27rem;
+  background-color: rgba(255, 255, 255, 0.13);
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 70%;
+  border-radius: 0.313rem;
+  backdrop-filter: blur(0.625rem);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 3.125rem 2.188rem;
+}
+
+.forms * {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.031rem;
+  outline: none;
+  border: none;
+}
+.mic-img {
+  width: 63%;
+  height: auto;
+  position: fixed;
+}
+.forms h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 2.625rem;
+  text-align: center;
+}
+.underline {
+  text-decoration: underline;
+}
+label {
+  display: block;
+  margin-top: 1.875rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+input {
+  display: block;
+  height: 1.875rem !important;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 0.188rem;
+  padding: 0 0.625rem;
+
+  font-size: 0.875rem;
+  font-weight: 300;
+  border-bottom: 1px solid #000000 !important;
+}
+
+.navbar-brand-two {
+  display: none;
+}
+
+#logo-F {
+  padding: 0.313rem;
+  background-color: red;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+  margin-right: 0.313rem;
+  border-radius: 0.313rem;
+}
+
+input[type="text"]:focus {
+  outline: none !important;
+}
+
+::placeholder {
+  color: #e5e5e5;
+}
+
+button {
+  margin-top: 1.563rem;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710 !important;
+  padding: 0.938rem 0;
+  font-size: 1.125rem;
+  font-weight: 600;
+  border-radius: 0.313rem;
+  cursor: pointer;
+  background-color: #000000 !important;
+  color: #ffffff !important;
+}
+.login-signup {
+  display: block;
+}
+.loader {
+  display: none;
+  position: absolute;
+  top: 86%;
+  left: 50%;
+  width: 1.563rem;
+  height: 1.563rem;
+  border-radius: 50%;
+  border: 0.5rem solid;
+  border-color: #e8e8e8 #0000;
+  animation: rotate 1.2s linear infinite;
+}
+
+.loader::after {
+  content: "";
+  position: absolute;
+  top: 1.25rem;
+  left: 1.25rem;
+  right: 1.25rem;
+  bottom: 1.25rem;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+.loadertwo {
+  display: none;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  width: 1.563rem;
+  height: 1.563rem;
+  border-radius: 50%;
+  border: 0.5rem solid;
+  border-color: #e8e8e8 #0000;
+  animation: rotate 1.2s linear infinite;
+}
+
+.loadertwo::after {
+  content: "";
+  position: absolute;
+  top: 1.25rem;
+  left: 1.25rem;
+  right: 1.25rem;
+  bottom: 1.25rem;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+@keyframes rotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 358px) {
+  .background {
+    display: none;
+  }
+
+  .forms {
+    left: 50%;
+    width: 18.75rem !important;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .mic-img {
+    width: 75%;
+    left: -5rem;
+    top: 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .background {
+    left: 24%;
+  }
+  .mic-img {
+    width: 70%;
+    left: -5rem;
+  }
+
+  .forms {
+    width: 21.875rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .background {
+    left: 24%;
+  }
+
+  .forms {
+    height: auto;
+    width: 22rem;
+  }
+  .mic-img {
+    width: 100%;
+    left: -13rem;
+    top: 7rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .background {
+    display: none;
+  }
+  .login-signup {
+    display: none;
+  }
+  .forms {
+    left: 50%;
+  }
+  .navbar-brand {
+    display: none;
+  }
+  .navbar-brand-two {
+    display: block;
+    font-size: 2rem !important;
+    text-align: center;
+    margin: 0 !important;
+    letter-spacing: 0.25rem;
+  }
+  #logo-F {
+    padding: 0 0.625rem !important;
+  }
+
+  .loader {
+    top: 74%;
+  }
+
+  .loadertwo {
+    top: 79%;
+  }
+}
+
+@media screen and (min-width: 2200px) {
+  .forms {
+    width: 25%;
+  }
 }
